[tool.poetry]
name = "repl_python3_beta_lesson9-geopandas-akarrnn"
version = "0.1.0"
description = ""
authors = ["aaakbw <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
shapely = "^1.7.1"
geopandas = "^0.9.0"
pandas = "^1.2.4"
pyproj = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
